--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
