--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.479.0",
+    "motion": "^12.5.0",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
