--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "sonner": "^2.0.1",
+    "swiper": "^11.2.5",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.1",
