--- a/.env
+++ b/.env
@@ -5,3 +5,11 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+NEXT_PUBLIC_API_URL="http://localhost:5204/api"
+
+# PostgreSQL Bağlantı Ayarları
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="postgres"
+POSTGRES_HOST="localhost"
+POSTGRES_DB="NurBilgi"
+POSTGRES_PORT="5432"
