--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "formidable": "^3.5.2",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.479.0",
     "motion": "^12.5.0",
     "next": "14.0.0",
+    "pdf-parse": "^1.1.1",
+    "pg": "^8.14.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
@@ -37,7 +40,10 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.4",
+    "@types/pg": "^8.11.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
