--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paddle/paddle-js": "^1.4.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -41,7 +42,7 @@
   },
   "devDependencies": {
     "@types/formidable": "^3.4.5",
-    "@types/node": "^20",
+    "@types/node": "^20.17.24",
     "@types/pdf-parse": "^1.1.4",
     "@types/pg": "^8.11.11",
     "@types/react": "^18",
