--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-quill": "^2.0.0",
     "sonner": "^2.0.1",
     "swiper": "^11.2.5",
